[package]
name = "brace-cms-core"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The brace content management system core."
repository = "https://github.com/brace-rs/brace-cms"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-config = { git = "https://github.com/brace-rs/brace-config", rev = "8f4dd5a4803ef23ea8cec4092b8a40e9a19ce8bb", features = ["toml"], default_features = false }
