[package]
name = "brace-cms-logger"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The brace content management system logger."
repository = "https://github.com/brace-rs/brace-cms"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-cms-core = { path = "../brace-cms-core" }
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
