[package]
name = "brace-cms-server"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The brace content management system server."
repository = "https://github.com/brace-rs/brace-cms"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = []
dev = ["listenfd"]

[dependencies]
brace-cms-core = { path = "../brace-cms-core" }
brace-cms-store-postgres = { path = "../brace-cms-store-postgres" }
brace-web = { git = "https://github.com/brace-rs/brace-web", rev = "dd0cee2e916553594acb8270632b5727474db01f" }
listenfd = { version = "0.3", optional = true }

[dev-dependencies]
actix-rt = "1.0"
