[package]
name = "brace-cms-store-postgres"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The postgres data store integration."
repository = "https://github.com/brace-rs/brace-cms"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-cms-core = { path = "../brace-cms-core" }
brace-data-store-postgres = { git = "https://github.com/brace-rs/brace-data", rev = "50592b806e748d922cd0461abbdcb1a2bb0e2062" }
brace-web-core = { git = "https://github.com/brace-rs/brace-web", rev = "dd0cee2e916553594acb8270632b5727474db01f" }
futures = "0.3"
